WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86219
ImageSkia.cpp does not conform to style guidelines
https://bugs.webkit.org/show_bug.cgi?id=86219
Summary
ImageSkia.cpp does not conform to style guidelines
Keyar Hood
Reported
2012-05-11 08:45:42 PDT
The file WebCore/platform/graphics/skia/ImageSkia.cpp does not conform to the style guidelines.
Attachments
Patch
(3.96 KB, patch)
2012-05-11 10:57 PDT
,
Keyar Hood
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keyar Hood
Comment 1
2012-05-11 10:57:45 PDT
Created
attachment 141449
[details]
Patch
Stephen White
Comment 2
2012-05-11 11:18:08 PDT
Comment on
attachment 141449
[details]
Patch Looks good (assuming the bots like it). Thanks for the cleanup. r=me
WebKit Review Bot
Comment 3
2012-05-11 14:40:06 PDT
Comment on
attachment 141449
[details]
Patch Clearing flags on attachment: 141449 Committed
r116806
: <
http://trac.webkit.org/changeset/116806
>
WebKit Review Bot
Comment 4
2012-05-11 14:40:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug