ImageSkia.cpp does not conform to style guidelines https://bugs.webkit.org/show_bug.cgi?id=86219

Patch by Keyar Hood <keyar@chromium.org> on 2012-05-11
Reviewed by Stephen White.

No tests as this is purely style changees.

* platform/graphics/skia/ImageSkia.cpp:
(WebCore::TransformDimensions):
(WebCore::BitmapImage::draw):
(WebCore::BitmapImageSingleFrameSkia::draw):

Canonical link: https://commits.webkit.org/103840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116806 268f45cc-cd09-0410-ab3c-d52691b4dbfc